--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-case-declarations": 0,
     "react/forbid-prop-types": 0,
     "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "linebreak-style": 0
   }
 }
